# ambertraceai-python

./: .gitignore  LICENSE  MANIFEST.in  MIGRATION.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
ambertraceai/: __init__.py  convenience.py  responses.py
ambertraceai/models/: __init__.py  approve_request.py  (+161 more)
examples/: .env.example  00_quickstart.py  01_domain_and_data.py  02_platform_lifecycle.py  03_connectors.py  04_api_keys.py  05_rules_and_suggestions.py  06_predictions.py  07_usage.py  08_fred_forecast.py  09_fred_analysis.py  10_verified_profile.py  11_fraud_detection.py  12_clinical_safety.py  13_loan_assessment.py  14_recruitment_compliance.py  15_environmental_compliance.py  16_timeseries_forecast.py  17_rule_coverage.py  18_access_governance.py  19_air_track_triage.py  19_data_search.py  20_bond_yield_forecast.py  21_bitcoin_forecast.py  21_bitcoin_macro_forecast.py  22_equity_forecast.py  22_sp500_macro_forecast.py  23_symbolic_forecast_why.py  24_air_track_isr_hispec.py  25_agent_spend_budget.py  25_cross_domain_cueing.py  26_neurosymbolic_bond_yield.py  27_agent_policy_gate.py  27_aml_transaction_monitoring.py  28_agent_policy_gate_cicd.py  28_medical_device_qms.py  29_content_moderation.py  29_rf_resource_manager_conformance.py  30_esg_disclosure_check.py  30_investment_decision_gate.py  (+46 more)
tests/: test_agent_policy_resource.py  test_client.py  test_dx_ergonomics.py  test_error_details.py  test_example_air_track_hispec.py  test_resilience.py  test_resources.py  test_sdk_e2e.py  test_typed_returns.py  test_wait_for_job.py
(+161 files in other folders)
