[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ambertraceai"
version = "0.17.1"
description = "Python SDK for the Ambertrace neurosymbolic AI platform API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Pilot Generative AI", email = "hello@ambertrace.ai"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24.0",
    "attrs>=23.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-httpx>=0.22",
    "respx>=0.20",
]

[project.urls]
Homepage = "https://ambertrace.ai"
Documentation = "https://app.ambertrace.ai/openapi/redoc"
Repository = "https://github.com/Pilot-Generative-AI/ambertraceai-python"

[tool.setuptools.packages.find]
include = ["ambertraceai*"]

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests that require a live API and an API key (deselected by default)",
]
addopts = "-m 'not e2e'"
